fixed table overflow and add dialog popup

--- a/css/base/button.css
+++ b/css/base/button.css
@@ -7,6 +7,7 @@
   border-radius: 3px;
   color: #fff;
   cursor: pointer;
+  outline: none
 }
 
 .f-btn:hover {
@@ -25,6 +26,7 @@
   border-radius: 3px;
   color: #111;
   cursor: pointer;
+  outline: none;
 }
 
 .f-second-btn:hover {
