--- a/css/base/paging.css
+++ b/css/base/paging.css
@@ -1,7 +1,49 @@
 .f-table-paging {
     display: flex;
     align-items: center;
-    height: 56px;
+    flex-shrink: 0;
     width: 100%;
-    background-color: cyan;
+    box-sizing: border-box;
+    padding-left: 12px;
+    padding-right: 24px;
+    height: 56px;
+    position: sticky;
+    left: 0;
+    bottom: 0;
+    background-color: #fff;
+}
+
+.f-table-paging .record-per-page {
+    margin: 0 16px;
+    width: 200px;
+    min-width: 200px;
+    border: 1px solid red;
+    box-sizing: border-box;
+}
+
+.f-table-paging .page-navigator {
+    display: flex;
+    align-items: center;
+}
+
+.page-navigator .previous-page {
+    margin-right: 13px;
+}
+
+.page-navigator .next-page {
+    margin-left: 13px;
+}
+
+.page-navigator .page-number-list {
+    display: flex;
+    align-items: center;
+}
+
+.page-number-list .page-number {
+    padding: 0 6px;
+}
+
+.page-navigator .page-number.active {
+    border: 1px solid #e0e0e0;
+    font-weight: 700;
 }
