--- a/css/common/common.css
+++ b/css/common/common.css
@@ -4,3 +4,49 @@
   margin: 0;
   background: 0 0;
 }
+
+.text-align-center {
+  text-align: center;
+}
+
+.text-align-left {
+  text-align: left;
+}
+
+.text-align-right {
+  text-align: right;
+}
+
+.w100 {
+  width: 100%;
+}
+
+.w50 {
+  width: 50%;
+}
+
+.w40 {
+  width: 40%;
+}
+
+.w60 {
+  width: 60%;
+}
+
+.w25 {
+  width: 25%;
+}
+
+.f-row {
+  margin-top: 8px;
+  width: 100%;
+  position: relative;
+}
+
+.f-row.f-row-flex {
+  display: flex;
+}
+
+.f-col+.f-col{
+  margin-left: 6px;
+}
